--- a/gb/20/4/29/n12069038.md
+++ b/gb/20/4/29/n12069038.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/uqgi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uqgi266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/uqgi266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/uqgi266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/uqgi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uqgi266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/uqgi266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/uqgi266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/uqgi266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/uqgi266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/uqgi266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/uqgi266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/uqgi266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/uqgi266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/uqgi266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/uqgi266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/uqgi266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/uqgi266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/uqgi266/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/uqgi266/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/uqgi266/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/uqgi266/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>美议员提法案 禁与配合中共审查片商合作</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>美议员提法案 制裁好莱坞片商与中共合作</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/04/GettyImages-1205126057-600x400.jpg" />
 <h6>美国参议员克鲁兹（Ted Cruz），将提出一项针对电影产业的法案，希望禁止美国国防部（DOD）与接受中国内容审查的片商合作。 (Drew Angerer/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2020年04月29日讯】（大纪元记者陈霆综合报导）<ahref="https://github.com/uqgi266/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E5%91%98.md#1">美国参议员</a><ahref="https://github.com/uqgi266/djy/blob/master/gb/tag/%E5%85%8B%E9%B2%81%E5%85%B9.md#1">克鲁兹</a>（Ted Cruz），将提出一项针对电影产业的法案，希望禁止<ahref="https://github.com/uqgi266/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%9B%BD%E9%98%B2%E9%83%A8.md#1">美国国防部</a>（DOD）与接受中国内容审查的片商合作。</p>
+	<p>【大纪元2020年04月29日讯】（大纪元记者陈霆综合报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E5%91%98.md#1">美国参议员</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%8B%E9%B2%81%E5%85%B9.md#1">克鲁兹</a>（Ted Cruz），将提出一项针对电影产业的法案，希望禁止<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%9B%BD%E9%98%B2%E9%83%A8.md#1">美国国防部</a>（DOD）与接受中国内容审查的片商合作。</p>
 <p>这项法案称作《SCRIPT 法案》，意思是“制止审查，恢复诚信，保护电影法案（The Stopping Censorship, Restoring Integrity, Protecting Talkies Act）”。</p>
-<p>在周二，<ahref="https://github.com/uqgi266/djy/blob/master/gb/tag/%E5%85%8B%E9%B2%81%E5%85%B9.md#1">克鲁兹</a>发推文写道：“长期以来，<ahref="https://github.com/uqgi266/djy/blob/master/gb/tag/%E5%A5%BD%E8%8E%B1%E5%9D%9E.md#1">好莱坞</a>一直以增加收益为由，配合中国（中共）的内容审查和宣传。”“《 SCRIPT法案》将是一个警钟，迫使好莱坞片商在美国政府的援助与中国的收入之间进行选择。”</p>
+<p>在周二，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%8B%E9%B2%81%E5%85%B9.md#1">克鲁兹</a>发推文写道：“长期以来，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%BD%E8%8E%B1%E5%9D%9E.md#1">好莱坞</a>一直以增加收益为由，配合中国（中共）的内容审查和宣传。”“《 SCRIPT法案》将是一个警钟，迫使好莱坞片商在美国政府的援助与中国的收入之间进行选择。”</p>
 <blockquote class="twitter-tweet">
 <p dir="ltr" lang="en">For too long, Hollywood has been complicit in China’s censorship and propaganda in the name of bigger profits: <ahref="https://t.co/EmqdC5H012">https://t.co/EmqdC5H012</a></p>
 <p>— Ted Cruz (@tedcruz) <ahref="https://twitter.com/tedcruz/status/1255255991198900225?ref_src=twsrc%5Etfw">April 28, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a></p>
-<p>事实上，<ahref="https://github.com/uqgi266/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%9B%BD%E9%98%B2%E9%83%A8.md#1">美国国防部</a>经常与电视和电影片商合作，在不影响军队的正常行动，不泄露军事机密的条件下，呈现更真实的军事节情。许多<ahref="https://github.com/uqgi266/djy/blob/master/gb/tag/%E5%A5%BD%E8%8E%B1%E5%9D%9E.md#1">好莱坞</a>大片，如《变形金刚》、《珍珠港》和《决战中途岛》等电影，都曾经向国防部咨询。</p>
+<p>事实上，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%9B%BD%E9%98%B2%E9%83%A8.md#1">美国国防部</a>经常与电视和电影片商合作，在不影响军队的正常行动，不泄露军事机密的条件下，呈现更真实的军事节情。许多<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%BD%E8%8E%B1%E5%9D%9E.md#1">好莱坞</a>大片，如《变形金刚》、《珍珠港》和《决战中途岛》等电影，都曾经向国防部咨询。</p>
 <p>然而，在中共治下的中国，内容审查是家常便饭。为了能进入中国市场，好莱坞必须竭力规避中共当局的禁忌话题，并将中共形塑成“正面、强大”的形象。许多好莱坞片商会寻求中国片商的共同投资，已确保电影能在中国上映。中国片商更透过并购与合资，深深介入了好莱坞。</p>
 <p>这不仅严重破坏电影创作自由，也让全世界的观众在无意间，收看了中共认可的内容与价值观，成为中共“大外宣”的一部分。</p>
 <p>在过去十年中，中国票房飞涨。中共官员称，中国电影院2019年的总票房收入达到92亿美元，而十年前仅为9.1亿美元。</p>
@@ -27,36 +27,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/6/n12008365.md#1">【瘟疫与中共】中共如何控制好莱坞</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/17/n12039732.md#1">【瘟疫与中共】折腰惹祸 疫情重创好莱坞</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/26/n12062454.md#1">美国会议员拟立法 禁凤凰卫视在美广播</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/28/n12066136.md#1">川普：美在严肃调查 有很多方法让中共担责</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/6/n12008365.md#1">【瘟疫与中共】中共如何控制好莱坞</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/17/n12039732.md#1">【瘟疫与中共】折腰惹祸 疫情重创好莱坞</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/26/n12062454.md#1">美国会议员拟立法 禁凤凰卫视在美广播</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/28/n12066136.md#1">川普：美在严肃调查 有很多方法让中共担责</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10086007.md#1" target="_blank">郑兢业：人吃与吃人（二）</a></li><li><a href="https://github.com/uqgi266/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/7/n10697882.md#1" target="_blank">这些患绝症的精英们何以逢生（2）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/2/n10947759.md#1" target="_blank">传奇总统里根（5）：竞选总统 众望所归</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10487846.md#1" target="_blank">功夫·寻道——武术大师李有甫的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/27/n12064316.md#1">金正恩在媒体“露面” 传平壤现恐慌性购物</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/27/n12063472.md#1">班农：中国人民一旦获知真相 将推翻中共</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/27/n12065545.md#1">董卿刚刚辟谣 其老公密春雷“暴富史”被扒</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/27/n12065576.md#1">专家：金正恩可能在视察导弹试射时受伤</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/27/n12064980.md#1">【新闻看点】庚子年忧思疯传 北京麻烦有多少？</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/26/n12062937.md#1">周星驰近况曝光 与林允隔空互动笑翻网络</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/27/n12065497.md#1">罗志祥丑闻引抵制风波 陆综近亿酬金或成泡影</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/26/n12061797.md#1">女儿参演八点档戏剧 梁佑南教演秘书秘诀</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/26/n12061698.md#1">接受家乡名主播专访 吴凤曝台湾防疫成功关键</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/27/n12064217.md#1">流浪猫带路人去买食物给它吃 结果被收养</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/22/n12052766.md#1">姻缘天定 非人力所能阻隔</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/26/n12062205.md#1">国学大师章太炎入幽冥的奇特经历</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/25/n12059633.md#1">衔玉而生 宝玉其人</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/25/n12060433.md#1">为着神意而战 巴顿将军的为将之道</a></li>
-<li><a href="https://github.com/uqgi266/djy/blob/master/gb/20/4/24/n12059475.md#1">【历史上的瘟疫】终结王莽新朝的大瘟疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/uqgi266/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/uqgi266/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/29/n12069038.htm">美议员提法案 禁与配合中共审查片商合作</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/29/n12069038.htm">美议员提法案 制裁好莱坞片商与中共合作</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/uqgi266/djy/blob/master/gb/20/4/29/n12069038.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/uqgi266/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/uqgi266/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/uqgi266/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/uqgi266/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uqgi266/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/4/29/n12069038.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
